# async-auth

./: .dockerignore  .env-example  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 2023-11-18_initial_migration.py  2023-11-20_initial_migration.py  2023-11-21_roles_table_migration.py  2023-11-22_implement_user_signatures_table.py  2023-11-23_3_user_model_update.py  2023-11-24_4_update_mtom_for_models_v2.py  2023-11-24_update_mtom_for_models.py  2023-11-24_update_mtom_for_models_v2.py  2023-11-25_5_implement_user_last_logins_table.py  2023-11-25_6_implement_user_refresh_tokens_table.py  2023-11-25_7_add_login_time_column.py  2023-11-25_implement_user_last_logins_table.py  2023-11-26_8_delete_time_column_from_logins_table.py  2023-11-29_9_update_tables.py
etc/nginx/: nginx.conf
nginx/: nginx.conf
nginx/conf.d/: site.conf
src/: cli.py  constants.py  main.py  models.py  schemas.py
src/core/: config.py
src/db/: postgres.py  redis.py  storages.py
src/v1/: dependencies.py  exceptions.py
src/v1/auth/: exceptions.py  helpers.py  models.py  routers.py  schemas.py  service.py
src/v1/healthcheck/: models.py
src/v1/roles/: constants.py  exceptions.py  models.py  routers.py  schemas.py  service.py
tests/: conftest.py  test_auth.py  test_healthcheck.py  test_roles.py  test_roles_for_user.py  test_users.py
tests/fixtures/: core.py  roles.py  roles_to_users.py  users.py
tests/utils/: check_role.py
(+5 files in other folders)
