[project]
name = "Async Auth API"
version = "1.0.0"
description = "Async Auth API"
requires-python = ">=3.10"


[metadata]
name = "Basic Auth API"
description-file = "README"


[tool.black]
line-length = 99
target-version = ["py310", "py311"]
include = '\.pyi?$'


[tool.flake8]
max-line-length = 99
